<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="100.0dip"
        android:layout_marginTop="100.0dip"
        android:src="@drawable/splash_screen_ic_app" />

    <LinearLayout
        android:id="@+id/layoutanim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10.0dip"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="#ffffffff"
            android:textSize="25.0sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7.0dip"
            android:gravity="center_horizontal"
            android:text="@string/slogan"
            android:textColor="#b3ffffff"
            android:textSize="18.0sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnKhamPha"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="170dp"
        android:background="@drawable/buttonshape"
        android:text="START"
        android:textColor="#141d2d"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/layout_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="45dp">

        <TextView
            android:id="@+id/tv_policy_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/policy_sum"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_policy_des"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/policy_sum2"
            android:textColor="#ffffff"
            android:textSize="14sp" />
    </RelativeLayout>
</LinearLayout>